fix ihpone text alignment, better distributed spacing

--- a/styling.CSS
+++ b/styling.CSS
@@ -63,13 +63,18 @@ section {
   font-family: "Open Sans", sans-serif;
 }
 
-section hr {
+hr {
   height: 1px;
   margin-top: 2rem;
   width: 50%; max-width: 300px;
     /* Set the hr color */
     color: #7BE0AD; /* old IE */
     background-color: #7BE0AD; /* Modern Browsers */
+}
+
+.inline-link {
+  color: #2d865a;
+  font-weight: bold;
 }
 
 .top {
@@ -84,7 +89,7 @@ section hr {
 
 .mid {
   text-align: left;
-  width: 30%;
+  width: 40%;
   height: 33%;
   margin-left: 15%;
   font-size: 2rem;
@@ -113,7 +118,7 @@ div .bottom {
 }
 
 .hide {
-  visibility: hidden;
+  display: none;
 }
 
 
@@ -143,20 +148,22 @@ div .bottom {
     margin: auto;
     height: 2rem;
     margin-bottom: 1rem;
+    margin-top: 1rem;
   }
 
   main h1{
     display: block;
-    margin: 0 35%;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 1.3rem;
     padding-top: 0;
     text-align: center;
     position: relative;
-    width: fit-content;
+    width: 50%;
   }
 
   .visible{
-    visibility: hidden;
+    display: none;
   }
 
   .hide{
@@ -170,7 +177,7 @@ div .bottom {
   margin: 2rem auto;
   padding: 0.5rem;
   cursor: pointer;
-  visibility: visible;
+  display: inherit;
   font-size: small;
   display: block;
   }
@@ -179,6 +186,7 @@ div .bottom {
   .mid{
     margin: auto;
     padding-bottom: 0;
+    padding-top: 3rem;
   }
 
   .mid h3{
@@ -200,4 +208,30 @@ div .bottom {
     font-size: 0.75rem;
   }
 
+  div.bottom {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    margin-bottom: 0;
+  }
+
+  section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-grow: 1;
+  }
+
+  body {
+    min-height: calc(100vh);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .content {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+
+  }
 }
